[tool.poetry]
name = "sustainability-tracker-data-engineering-project"
version = "0.1.0"
description = ""
authors = ["Mohammed Haydar <mohammed.haidar.1999@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
